<resources>
    <string name="app_name">Puppr</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testString">This is a test</string>
    <string name="pupprTitle">Puppr</string>
    <string name="userButton">I\'m a user</string>
    <string name="shelterButton">I\'m a shelter</string>
    <string name="emailEntry">Email</string>
    <string name="passwordEntry">Password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_phone">sign up with phone</string>
    <string name="sign_up_with_email">sign up with email</string>
    <string name="web_client_id">AIzaSyDqr8LR7AJTMbhsytMTImi7j8AiV_2wnrA</string>
    <string name="loginSubmitButtonText">Sign in</string>
    <string name="signUpButtonText">join</string>
    <string name="userSignUpButtonText">join as user</string>
    <string name="shelterSignUpButton">join as shelter</string>
    <string name="profileTitleText">Profile</string>
    <string name="userNameText">Arya Stark</string>
    <string name="userImageDescription">User Image</string>
    <string name="continueButtonText">continue</string>
    <string name="nameInputText">Name</string>
    <string name="addressInputText">Address</string>
    <string name="addressInputHint">Address</string>
    <string name="nameInputHint">Name</string>
    <string name="signUpSubmitButton">join</string>
    <string name="joinWithGoogleButtonText">Join with Google</string>
    <string name="joinWithPhoneButtonText">join with Phone #</string>
    <string name="main_dog_image">main dog image</string>
    <string name="menu_view_dogs">View Dogs</string>
    <string name="menu_saved_dogs">Saved Dogs</string>
    <string name="menu_preferences">Preferences</string>
    <string name="dog_name">Cornbread</string>
    <string name="dislike_button">dislike button</string>
    <string name="like_button">like button</string>
    <string name="saved_dogs_title">Saved Dogs</string>
    <string name="preferences">Preferences</string>
    <string name="dog_shelter_name">Happy Dog Shelter</string>
    <string name="uploadDogs">Upload Dogs</string>
    <string name="myShelter">My Shelter</string>
    <string name="myDogs">My Dogs</string>
    <string name="shelterName">Grove City Animal Shelter</string>
    <string name="shelterImage" />
    <string name="shelterAddress">123 Main Street</string>
    <string name="shelterPhone">(123) 456 - 780-</string>
    <string name="saveDogButton">Save Dog</string>
    <string name="dogName">Dog Name</string>
    <string name="takePhoto">Take Photo</string>
    <string name="dogImage">Dog Image</string>
    <string name="signOutButtonText">Log Out</string>
    <string name="nameText">Name:</string>
    <string name="editableName">Name (ex: Gabe)</string>
    <string name="userPrefTitle">Setup Info and Preferences</string>
    <string name="addressText">Address (ex: 200 Campus Drive, Grove City MA)</string>
    <string name="phoneNumberText">Phone Number (ex: 1234567890)</string>
    <string name="sumbit_button">Submit</string>
    <string name="bio_hint">Enter a short bio about yourself</string>
    <string name="shelter_title_text">Setup Info and Preferences</string>
    <string name="s_name_hint">Shelter Name (ex: Bargain Barkers)</string>
    <string name="s_bio_hint">Enter a short bio about the shelter</string>
    <string name="s_website_hint">Shelter Website (ex: www.BargainBarkers.com)</string>
    <string name="prefNameText">prefNameText</string>
    <string name="prefAddressText">prefAddressText</string>
    <string name="prefBioText">prefBioText</string>
    <string name="prefEmailText">prefEmailText</string>
    <string name="prefPhoneText">prefPhoneText</string>
    <string name="dogbio">dogBio</string>
    <string name="dogage">dogAge</string>
    <string name="dogbreed">dogBreed</string>
    <string name="dogcolor">dogColor</string>
    <string name="doghealth">dogHealth</string>
    <string name="UserInfroID" />
    <string name="UserInfoID">Uner Information:</string>
    <string name="forgotPasswordText">Reset my Password</string>
</resources>
