<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".userPrefSetupFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/shelterPrefTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/signika_bold"
                    android:text="@string/shelter_title_text"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/shelter_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50sp"
                    android:ems="10"
                    android:hint="@string/s_name_hint"
                    android:textColorHint="#868686" />

                <EditText
                    android:id="@+id/s_address_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:hint="@string/addressText"
                    android:textColorHint="#868686"/>

                <EditText
                    android:id="@+id/s_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:ems="10"
                    android:hint="@string/phoneNumberText"
                    android:inputType="textPostalAddress"
                    android:textColorHint="#868686" />

                <EditText
                    android:id="@+id/s_bio_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:ems="10"
                    android:hint="@string/s_bio_hint"
                    android:textColorHint="#868686" />

                <EditText
                    android:id="@+id/shelter_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:ems="10"
                    android:inputType="textWebEditText"
                    android:hint="@string/s_website_hint"
                    android:textColorHint="#868686" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sumbit_button"
                    android:layout_gravity="center_horizontal"/>


            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</layout>