<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E69842"
        tools:context=".Preference">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/preference_bottom_nav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/client_bottom_nav_items" />

        <TextView
            android:id="@+id/title"
            style="@style/Title_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/preferences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preference_bottom_nav" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/signOutButton"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="User Information"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/prefName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/prefNameText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/prefAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/prefAddressText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/prefBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/prefBioText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/prefEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/prefEmailText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/prefPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/prefPhoneText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\nDog Preferences"
                    android:textSize="30sp" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gender: (Left for male)"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/switch4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Neutered"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signOutButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>