<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".userAccountTypesFragment"
        android:background="@drawable/dog_background_photo"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/pupprText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika_bold"
            android:gravity="center"
            android:paddingBottom="250sp"
            android:text="@string/pupprTitle"
            android:textColor="#000000"
            android:textSize="60sp"
            tools:layout_conversion_absoluteHeight="81dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/googleSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/google_logo"
            android:drawablePadding="10sp"
            android:paddingRight="8sp"
            android:text="@string/sign_in_with_google" />


        <Button
            android:id="@+id/phoneSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/phone_image"
            android:drawablePadding="10sp"
            android:paddingLeft="3sp"
            android:paddingRight="9sp"
            android:text="@string/sign_up_with_phone" />


        <Button
            android:id="@+id/emailSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10sp"
            android:paddingLeft="8sp"
            android:paddingRight="10sp"
            android:text="@string/sign_up_with_email" />


    </LinearLayout>
</layout>