<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Preference">

        <TextView
            android:id="@+id/title"
            style="@style/Title_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/uploadDogs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dogImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dogImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19"
            app:layout_constraintVertical_chainStyle="packed"
            tools:src="@tools:sample/avatars[0]" />

        <Button
            android:id="@+id/captureDogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/takePhoto"
            app:layout_constraintBottom_toTopOf="@id/dog_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/dog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/dogName"
            android:inputType="textPassword"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            app:layout_constraintBottom_toTopOf="@+id/saveDogButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="51dp"
            tools:layout_conversion_absoluteWidth="178dp" />

        <Button
            android:id="@+id/saveDogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveDogButton"
            app:layout_constraintBottom_toTopOf="@id/preference_bottom_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/preference_bottom_nav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            app:itemIconTint="@color/orange"
            app:itemTextColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:menu="@menu/shelter_bottom_nav_items" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>