<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".LoginFragment"
        android:background="@drawable/dog_background_photo"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/pupprText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika_bold"
            android:gravity="center"
            android:paddingBottom="250sp"
            android:text="@string/pupprTitle"
            android:textSize="60sp"
            android:textColor="#000000"
            tools:layout_conversion_absoluteHeight="81dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:background="#FFFFFF"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:text="@string/userButton" />

        <Button
            android:id="@+id/shelter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:paddingLeft="8sp"
            android:paddingRight="8sp"
            android:text="@string/shelterButton" />

    </LinearLayout>
</layout>